# Analise-dos-microdados-ENEM-2024

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/processed/: amostra_notas.parquet  desempenho_escola.parquet  desempenho_uf.parquet  itens.parquet  lingua.parquet  notas_hist.parquet  participantes_municipio.parquet  participantes_uf.parquet  perfil_participantes.parquet  presenca.parquet  redacao_competencias.parquet  redacao_dist.parquet  redacao_status.parquet  resultados_municipio.parquet  socio_participantes.parquet
notebooks/: 01-perfil-participantes.ipynb  02-desempenho-e-abstencao.ipynb  03-redacao.ipynb  04-geografia-e-analise-ecologica.ipynb
src/enem2024/: __init__.py  build_aggregates.py  config.py  data.py  labels.py  plots.py
tests/: conftest.py  test_data.py  test_labels.py
