[project]
name = "enem-2024-eda"
version = "0.1.0"
description = "Análise exploratória dos microdados do ENEM 2024 (INEP) com DuckDB e pandas"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "João Biazzin" }]
dependencies = [
    "duckdb>=1.1",
    "pandas>=2.2",
    "pyarrow>=17",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "geopandas>=1.0",
    "requests>=2.32",
    "scipy>=1.18.0",
    "statsmodels>=0.14.6",
]

[project.urls]
Repository = "https://github.com/Joao-Biazzin/Analise-dos-microdados-ENEM-2024"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "nbconvert>=7.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enem2024"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
